@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.1"
-#define public MagickPackageVersionAddendum ".020040226"
+#define public MagickPackageVersionAddendum ".020040306"
 #define public MagickPackageReleaseDate "unreleased"
