@@ -1,5 +1,16 @@
+2004-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/nt_base.c (NTSystemComman): Use
+	MsgWaitForMultipleObjects() rather than WaitForSingleObject() in
+	order to avoid possible deadlock when application code directly or
+	indirectly creates windows.
+
 2004-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/animate.c (XMagickCommand): URL should point to
+	http://graphicsmagick.org/.
+	* magick/display.c (XMagickCommand): URL should point to
+	http://graphicsmagick.org/.
 	* magick/image.c (DisplayImages): Changes to fix memory leaks in
 	X11 commands had bugs which seriously broke DisplayImages.  Now
 	DisplayImages works properly again.
